# pi-forge-quantum-genesis

./: .dockerignore  .env.example  .env.generated  .env.launch.example  .env.render.example  .env.testnet.example  .env.verification.example  .gitignore  .gitmodules  .markdownlintrc  .railwayignore  .vercelignore  0G_ARCHITECTURE_OVERVIEW.md  19TH_SOVEREIGN_ACT_SETTLEMENT_ATTESTATION.md  =1.6.0  =21.0  ARCHITECTURE.md  ARCHIVAL_RITUAL_COMPLETE.md  AUTONOMOUS_DEPLOYMENT_HANDOFF.md  AUTONOMOUS_HANDOVER_SUMMARY.md  CANONICAL_ARCHITECTURE.md  CLEANUP_STATUS_DASHBOARD.md  CNAME  CODEOWNERS  COMMIT_55626EA_VERIFICATION.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY_ISSUE_108.md  CONSOLIDATION.md  CONSTELLATION_ACTIVATION.md  CONTRIBUTING.md  CONTRIBUTORS.md  COVENANT_OF_RESONANT_EFFICIENCY.md  DASHBOARD.html  DEPENDENCY_FIX_VERIFICATION.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_CONSOLIDATION.md  DEPLOYMENT_READINESS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_0G_DEX.md  (+145 more)
.github/: AUTOMERGE_SETUP.md  BRANCH_PROTECTION.md  BRANCH_PROTECTION_QUICKSTART.md  BRANCH_PROTECTION_SUMMARY.md  CODEOWNERS  POST_MERGE_INSTRUCTIONS.md  README.md  branch-protection-config.json  copilot-instructions.md  dependabot.yml  pull_request_template.md.new
.scripts/: mandala-pulse.js
api/: autonomous-metrics.ts  pi-identify.ts
assets/: ascii-banner.txt
audits/: external-dependency-audit.txt  runtime-network-surface.txt
backend/: .env.example  app.py  (+7 more)
contracts/oinio-memorial-bridge/: .gitignore  Cargo.toml  README.md  build.sh  deploy.sh
contracts/oinio-memorial-bridge/src/: lib.rs
(+622 files in other folders)
