[package]
name = "oinio-memorial-bridge"
version = "1.0.0"
edition = "2021"
authors = ["Kris Olofson <onenoly1010@users.noreply.github.com>"]
description = "OINIO Memorial Bridge - For the Beloved Keepers of the Northern Gateway"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
